syntax = "proto3";

package amp.worker.events.v1;

// Event envelope - common wrapper for all events
message WorkerEvent {
  // Unique event identifier (UUID v7 for time-ordering)
  string event_id = 1;

  // Event type discriminator (e.g., "sync.started", "sync.progress")
  string event_type = 2;

  // Schema version for forward compatibility
  string event_version = 3;

  // Event timestamp (RFC 3339)
  string timestamp = 4;

  // Event source metadata
  EventSource source = 5;

  // Event payload (one of the specific event types)
  oneof payload {
    SyncStarted sync_started = 10;
    SyncProgress sync_progress = 11;
    SyncCompleted sync_completed = 12;
    SyncFailed sync_failed = 13;
  }
}

// Source metadata for event tracing
message EventSource {
  string worker_id = 1;
}

// Dataset identifier
message DatasetInfo {
  string namespace = 1;
  string name = 2;
  string manifest_hash = 3;
}

// Sync progress information
message ProgressInfo {
  uint64 start_block = 1;
  uint64 current_block = 2;
  optional uint64 end_block = 3;      // Not set in continuous mode
  optional uint32 percentage = 4;      // Not set in continuous mode
  uint64 files_count = 5;
  uint64 total_size_bytes = 6;
}

// Event: Sync job started
message SyncStarted {
  int64 job_id = 1;
  DatasetInfo dataset = 2;
  string table_name = 3;
  optional uint64 start_block = 4;
  optional uint64 end_block = 5;
}

// Event: Sync progress update
message SyncProgress {
  int64 job_id = 1;
  DatasetInfo dataset = 2;
  string table_name = 3;
  ProgressInfo progress = 4;
}

// Event: Sync job completed successfully
message SyncCompleted {
  int64 job_id = 1;
  DatasetInfo dataset = 2;
  string table_name = 3;
  uint64 final_block = 4;
  uint64 duration_millis = 5;
}

// Event: Sync job failed
message SyncFailed {
  int64 job_id = 1;
  DatasetInfo dataset = 2;
  string table_name = 3;
  string error_message = 4;
  optional string error_type = 5;
}
